--- a/build.xml
+++ b/build.xml
@@ -1,33 +1,36 @@
 <project name="baltrad-db" basedir=".">
 
 <!-- NOTE: not all dependencies are set up here and are instead
-           handled by SCons, which drives the build.
+           handled by waf, which drives the build.
 -->
 
+  <property name="waf.builddir" location="." />
+
   <target name="build" depends="compile">
-    <jar jarfile="lib/jbrfc.jar"
-         basedir="build/swig/classes" />
+    <jar jarfile="${waf.builddir}/jbrfc.jar"
+         basedir="${waf.builddir}/swig/classes" />
   </target>
 
   <target name="compile">
-    <mkdir dir="build/swig/classes" />
-    <javac srcdir="build/swig/eu"
-    	   destdir="build/swig/classes" />
+    <mkdir dir="${waf.builddir}/swig/classes" />
+    <javac srcdir="${waf.builddir}/swig/eu"
+    	   destdir="${waf.builddir}/swig/classes" />
     <javac srcdir="swig/java/eu"
-           destdir="build/swig/classes" />
+           destdir="${waf.builddir}/swig/classes" />
   </target>
 
   <target name="build-tests" depends="compile-tests">
-    <jar jarfile="lib/jbrfc_test.jar"
-         basedir="build/test/classes" />
+    <jar jarfile="${waf.builddir}/jbrfc_test.jar"
+         basedir="${waf.builddir}/test/classes" />
   </target> 
-
-  <target name="compile-tests" depends="build">
-    <mkdir dir="build/test/classes" />
+    
+  <!-- also depends on 'build' -->
+  <target name="compile-tests">
+    <mkdir dir="${waf.builddir}/test/classes" />
     <javac srcdir="test/java/eu"
-           destdir="build/test/classes">
-      <classpath location="lib/jbrfc.jar"/>
-      <classpath location="deplib/junit4.jar"/>
+           destdir="${waf.builddir}/test/classes">
+      <classpath location="${waf.builddir}/jbrfc.jar" />
+      <classpath location="deplib/junit4.jar" />
     </javac>
   </target>
 
@@ -43,32 +46,30 @@
     </sql>
   </target>
 
-  <target name="drop-postgresql-testdb">
-    <sql rdbms="postgres"
-         driver="org.postgresql.Driver"
-         url="${db.url}"
-         userid="${db.username}" 
-         password="${db.password}">
-      <classpath location="deplib/postgresql-8.4-701.jdbc4.jar" />
-      <transaction src="schema/postgresql/drop.sql" />
-    </sql>
-  </target>
-
-  <target name="execute-tests" depends="create-postgresql-testdb">
+  <target name="execute-database-tests" depends="create-postgresql-testdb" unless="db.test_db_dsn">
     <mkdir dir="test/reports"/>
     <junit showoutput="true" printsummary="no">
       <classpath location="deplib/junit4.jar" />
-      <classpath location="lib/jbrfc.jar" />
-      <classpath location="lib/jbrfc_test.jar" />
+      <classpath location="${waf.builddir}/jbrfc.jar" />
+      <classpath location="${waf.builddir}/jbrfc_test.jar" />
       <sysproperty key="db.test_db_dsn" value="${db.test_db_dsn}"/>
       <sysproperty key="db.test_db_schema_dir" value="${db.test_db_schema_dir}"/>
       <formatter type="xml" />
-      <test name="eu.baltrad.fc.TestQString" todir="test/reports" />
-      <test name="eu.baltrad.fc.TestDate" todir="test/reports" />
-      <test name="eu.baltrad.fc.TestTime" todir="test/reports" />
       <test name="eu.baltrad.fc.TestFileCatalog" todir="test/reports" />
     </junit>
     <antcall target="drop-postgresql-testdb"/>
   </target>
 
+  <target name="execute-simple-tests">
+    <mkdir dir="test/reports"/>
+    <junit showoutput="true" printsummary="no">
+      <classpath location="deplib/junit4.jar" />
+      <classpath location="${waf.builddir}/jbrfc.jar" />
+      <classpath location="${waf.builddir}/jbrfc_test.jar" />
+      <formatter type="xml" />
+      <test name="eu.baltrad.fc.TestQString" todir="test/reports" />
+      <test name="eu.baltrad.fc.TestDate" todir="test/reports" />
+      <test name="eu.baltrad.fc.TestTime" todir="test/reports" />
+    </junit>
+  </target>
 </project>
