--- a/build.xml
+++ b/build.xml
@@ -70,6 +70,7 @@
       <test name="eu.baltrad.fc.TestQString" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.TestDate" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.TestTime" todir="${waf.builddir}/test/reports" />
+      <test name="eu.baltrad.fc.TestDateTime" todir="${waf.builddir}/test/reports" />
     </junit>
   </target>
 </project>
