use angle-bracket includes in tests

--- a/test/brfc/test_config.cpp.in
+++ b/test/brfc/test_config.cpp.in
@@ -17,7 +17,7 @@ You should have received a copy of the GNU Lesser General Public License
 along with baltrad-db. If not, see <http://www.gnu.org/licenses/>.
 */
 
-#include "config.hpp"
+#include <brfc/test_config.hpp>
 
 namespace brfc {
 
