--- a/build.xml
+++ b/build.xml
@@ -83,6 +83,7 @@
       <test name="eu.baltrad.fc.TestDate" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.TestTime" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.TestDateTime" todir="${waf.builddir}/test/reports" />
+      <test name="eu.baltrad.fc.StdExceptionTest" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.expr.ExpressionTest" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.expr.ExpressionFactoryTest" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.expr.ExpressionListTest" todir="${waf.builddir}/test/reports" />
