--- a/build.xml
+++ b/build.xml
@@ -84,8 +84,8 @@
       <test name="eu.baltrad.fc.TestTime" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.TestDateTime" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.StdExceptionTest" todir="${waf.builddir}/test/reports" />
-      <test name="eu.baltrad.fc.expr.ExpressionTest" todir="${waf.builddir}/test/reports" />
-      <test name="eu.baltrad.fc.oh5.TestSource" todir="${waf.builddir}/test/reports" />
+      <test name="eu.baltrad.fc.ExpressionTest" todir="${waf.builddir}/test/reports" />
+      <test name="eu.baltrad.fc.Oh5SourceTest" todir="${waf.builddir}/test/reports" />
     </junit>
   </target>
 </project>
