--- a/build.xml
+++ b/build.xml
@@ -87,6 +87,7 @@
       <test name="eu.baltrad.fc.StdExceptionTest" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.ExpressionTest" todir="${waf.builddir}/test/reports" />
       <test name="eu.baltrad.fc.Oh5SourceTest" todir="${waf.builddir}/test/reports" />
+      <test name="eu.baltrad.fc.CustomFileNamerTest" todir="${waf.builddir}/test/reports" />
     </junit>
   </target>
 </project>
