--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .lock*
 .waf-*
 build/
+client/python/src/baltrad.bdbclient.egg-info/
 common/src/baltrad.bdbcommon.egg-info/
 doc/html
 server/src/baltrad.bdbserver.egg-info/
