--- a/client/java/build.xml
+++ b/client/java/build.xml
@@ -68,9 +68,6 @@ along with baltrad-db. If not, see <http://www.gnu.org/licenses/>.
     </jar>
   </target>
 
-  <!-- same as running build and execute.test -->
-  <target name="distribution" depends="build, execute.test" />
-
   <target name="prepare.tests" depends="prepare.test, prepare.itest"/>
 
   <target name="execute.tests" depends="prepare.tests, execute.test, execute.itest"/>
@@ -79,7 +76,7 @@ along with baltrad-db. If not, see <http://www.gnu.org/licenses/>.
 
   <target name="hudson-install" depends="hudson,install-files" />
 
-  <target name="install" depends="distribution, install-files" />
+  <target name="install" depends="build, install-files" />
 
   <target name="install-files">
     <mkdir dir="${prefix}/share/baltrad-bdb/java/" />
@@ -199,7 +196,7 @@ along with baltrad-db. If not, see <http://www.gnu.org/licenses/>.
       <classpath location="${build.classes.dir}"/>
       <classpath refid="lib.path"/>
       <classpath location="${build.itest.dir}" />
-      <sysproperty key="itest.restdb.uri" value="${itest.restdb.uri}"/>
+      <sysproperty key="baltrad.bdb.server.uri" value="${baltrad.bdb.server.uri}"/>
       <batchtest fork="yes" todir="${dist.dir}/junit-reports">
         <fileset dir="${build.itest.dir}" includes="**/*Test.class" />
       </batchtest>
@@ -209,7 +206,6 @@ along with baltrad-db. If not, see <http://www.gnu.org/licenses/>.
   <!-- clean directories for building -->
   <target name="clean">
     <delete dir="${build.dir}" />
-    <delete dir="${dist.dir}" />
   </target>
   
   <!-- Prepare for compilation and jar-generation, copy files -->
