--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.egg-info/
 test-results.xml
 client/java/build
+client/java/etc/develop.properties
 client/java/dist
 client/python/build/
 client/python/dist/
