update hudson build
- don't issue direct sql statements
- baltrad.bdb.bin.path is at ../../test-env/bin

--- a/misc/hudsonbuild.properties
+++ b/misc/hudsonbuild.properties
@@ -5,4 +5,4 @@ baltrad.bdb.server.backend.uri=postgresql://baltrad:baltrad@localhost/bdbtestdb
 baltrad.bdb.server.backend.storage.type=filesystem
 baltrad.bdb.server.backend.storage.location=/tmp/bdb-hudson-storage
 baltrad.bdb.server.backend.storage.layers=3
-baltrad.bdb.bin.path=../../env/bin
+baltrad.bdb.bin.path=../../test-env/bin
