update hudson build

--- a/misc/hudsonbuild.properties
+++ b/misc/hudsonbuild.properties
@@ -6,3 +6,4 @@ baltrad.bdb.server.backend.storage.type=filesystem
 baltrad.bdb.server.backend.storage.location=/tmp/bdb-hudson-storage
 baltrad.bdb.server.backend.storage.layers=3
 baltrad.bdb.bin.path=../../test-env/bin
+itest.bdbserver.properties=../../misc/hudsonbuild.properties
