--- a/server/etc/develop.properties
+++ b/server/etc/develop.properties
@@ -1,7 +1,7 @@
 baltrad.bdb.server.type = werkzeug
 baltrad.bdb.server.uri = http://localhost:8080
 baltrad.bdb.server.backend.type = sqlalchemy
-baltrad.bdb.server.backend.uri = postgresql://baltrad:baltrad@localhost/baltrad
+baltrad.bdb.server.backend.uri = postgresql://baltrad:baltrad@localhost/bdbtestdb
 baltrad.bdb.server.backend.storage.type=filesystem
 baltrad.bdb.server.backend.storage.location=/path/to/storage
 baltrad.bdb.server.backend.storage.layers=3
