--- a/server/etc/example.properties
+++ b/server/etc/example.properties
@@ -5,3 +5,8 @@ baltrad.bdb.server.backend.uri = postgresql://user:pass@host/database
 baltrad.bdb.server.backend.storage.type=filesystem
 baltrad.bdb.server.backend.storage.location=/path/to/storage
 baltrad.bdb.server.backend.storage.layers=3
+baltrad.bdb.server.auth.providers=noauth, keyczar
+baltrad.bdb.server.auth.verify_content=true
+baltrad.bdb.server.auth.keyczar.keystore_root=/path/to/keystore
+baltrad.bdb.server.auth.keyczar.keys.keyname1=/path/to/key
+baltrad.bdb.server.auth.keyczar.keys.keyname2=relkey
