--- a/misc/hudsonbuild.properties
+++ b/misc/hudsonbuild.properties
@@ -5,5 +5,8 @@ baltrad.bdb.server.backend.uri=postgresql://baltrad:baltrad@localhost/bdbtestdb
 baltrad.bdb.server.backend.storage.type=filesystem
 baltrad.bdb.server.backend.storage.location=/tmp/bdb-hudson-storage
 baltrad.bdb.server.backend.storage.layers=3
+baltrad.bdb.server.auth.providers=noauth,keyczar
+baltrad.bdb.server.auth.keyczar.keystore_root=/home/hudson/.hudson/jobs/baltrad-db/workspace/client/java/etc/keys
+baltrad.bdb.server.auth.keyczar.keys.testkey=testkey
 baltrad.bdb.bin.path=../../test-env/bin
 itest.bdbserver.properties=../../misc/hudsonbuild.properties
