--- a/client/java/build.xml
+++ b/client/java/build.xml
@@ -43,7 +43,7 @@ along with baltrad-db. If not, see <http://www.gnu.org/licenses/>.
   <property file="${itest.bdbserver.properties}"/>
 
   <echo level="info"
-        message="using ${baltrad.bdb.server.backend.uri} as the backend for test database" />
+        message="using ${baltrad.bdb.server.backend.sqla.uri} as the backend for test database" />
 
   <path id="lib.path">
     <fileset dir="${lib.dir}">
