--- a/misc/hudsonbuild.properties
+++ b/misc/hudsonbuild.properties
@@ -1,10 +1,7 @@
 baltrad.bdb.server.type=werkzeug
 baltrad.bdb.server.uri=http://localhost:20080
-baltrad.bdb.server.backend.type=sqlalchemy
-baltrad.bdb.server.backend.uri=postgresql://baltrad:baltrad@localhost/bdbtestdb
-baltrad.bdb.server.backend.storage.type=filesystem
-baltrad.bdb.server.backend.storage.location=/tmp/bdb-hudson-storage
-baltrad.bdb.server.backend.storage.layers=3
+baltrad.bdb.server.backend.type=sqla
+baltrad.bdb.server.backend.sqla.uri=postgresql://baltrad:baltrad@localhost/bdbtestdb
 baltrad.bdb.server.auth.providers=noauth,keyczar
 baltrad.bdb.server.auth.keyczar.keystore_root=/home/hudson/.hudson/jobs/baltrad-db/workspace/client/java/etc/keys
 baltrad.bdb.server.auth.keyczar.keys.testkey=testkey
