--- a/server/etc/example.properties
+++ b/server/etc/example.properties
@@ -1,10 +1,7 @@
 baltrad.bdb.server.type = werkzeug
 baltrad.bdb.server.uri = http://localhost:8080
-baltrad.bdb.server.backend.type = sqlalchemy
-baltrad.bdb.server.backend.uri = postgresql://user:pass@host/database
-baltrad.bdb.server.backend.storage.type=filesystem
-baltrad.bdb.server.backend.storage.location=/path/to/storage
-baltrad.bdb.server.backend.storage.layers=3
+baltrad.bdb.server.backend.type = sqla
+baltrad.bdb.server.backend.sqla.uri = postgresql://user:pass@host/database
 baltrad.bdb.server.auth.providers=noauth, keyczar
 baltrad.bdb.server.auth.verify_content=true
 baltrad.bdb.server.auth.keyczar.keystore_root=/path/to/keystore
