Ticket 536: enable storing physical files in the filesystem

--- a/server/etc/example.properties
+++ b/server/etc/example.properties
@@ -2,6 +2,9 @@ baltrad.bdb.server.type = werkzeug
 baltrad.bdb.server.uri = http://localhost:8080
 baltrad.bdb.server.backend.type = sqla
 baltrad.bdb.server.backend.sqla.uri = postgresql://user:pass@host/database
+baltrad.bdb.server.backend.sqla.storage.type=fs
+baltrad.bdb.server.backend.sqla.storage.fs.path=/path/to/storage
+baltrad.bdb.server.backend.sqla.storage.fs.layers=3
 baltrad.bdb.server.auth.providers=noauth, keyczar
 baltrad.bdb.server.auth.verify_content=true
 baltrad.bdb.server.auth.keyczar.keystore_root=/path/to/keystore
