--- a/client/java/etc/example.develop.properties
+++ b/client/java/etc/example.develop.properties
@@ -13,8 +13,11 @@ baltrad.bdb.bin.path=../../env/bin
 # by default, use this file
 itest.bdb.properties=etc/develop.properties
 
-# BDB server properties
+# BDB server properties (used for integration tests)
 baltrad.bdb.server.type=werkzeug
 baltrad.bdb.server.uri=http://localhost:20001
-baltrad.bdb.server.backend.type=sqlalchemy
-baltrad.bdb.server.backend.uri=postgresql://user:pass@localhost/bdbtestdb
+baltrad.bdb.server.backend.type=sqla
+baltrad.bdb.server.backend.sqla.uri=postgresql://baltrad:baltrad@localhost/bdbtestdb
+baltrad.bdb.server.auth.providers = noauth, keyczar
+baltrad.bdb.server.auth.keyczar.keystore_root=/home/snny/src/baltrad-db/client/java/etc/keys
+baltrad.bdb.server.auth.keyczar.keys.testkey=testkey
