Ticket 845: server: disable access to 'DELETE /file/' by default

--- a/client/java/etc/example.develop.properties
+++ b/client/java/etc/example.develop.properties
@@ -16,6 +16,7 @@ itest.bdb.properties=etc/develop.properties
 # BDB server properties (used for integration tests)
 baltrad.bdb.server.type=werkzeug
 baltrad.bdb.server.uri=http://localhost:20001
+baltrad.bdb.server.enable_remove_all_files=true
 baltrad.bdb.server.backend.type=sqla
 baltrad.bdb.server.backend.sqla.uri=postgresql://baltrad:baltrad@localhost/bdbtestdb
 baltrad.bdb.server.auth.providers = noauth, keyczar
