--- a/server/etc/example.properties
+++ b/server/etc/example.properties
@@ -1,5 +1,6 @@
 baltrad.bdb.server.type = werkzeug
 baltrad.bdb.server.uri = http://localhost:8080
+baltrad.bdb.server.enable_remove_all_files=false
 baltrad.bdb.server.backend.type = sqla
 baltrad.bdb.server.backend.sqla.uri = postgresql://user:pass@host/database
 baltrad.bdb.server.backend.sqla.storage.type=fs
