Ticket 45: server: serve more efficiently

--- a/misc/hudsonbuild.properties
+++ b/misc/hudsonbuild.properties
@@ -1,4 +1,11 @@
-baltrad.bdb.server.type=werkzeug
+baltrad.bdb.server.type=cherrypy
+# Number of working threads for cherrypy
+baltrad.bdb.server.cherrypy.threads = 10
+# The request queue size (backlog)
+baltrad.bdb.server.cherrypy.backlog = 5
+# The timeout for accepted connections
+baltrad.bdb.server.cherrypy.timeout = 10
+
 baltrad.bdb.server.uri=http://localhost:20080
 baltrad.bdb.server.enable_remove_all_files=true
 baltrad.bdb.server.backend.type=sqla
