--- a/server/etc/example.properties
+++ b/server/etc/example.properties
@@ -1,4 +1,12 @@
-baltrad.bdb.server.type = werkzeug
+# Can be werkzeug or cherrypy (recommended)
+baltrad.bdb.server.type = cherrypy
+# Number of working threads for cherrypy
+baltrad.bdb.server.cherrypy.threads = 10
+# The request queue size (backlog)
+baltrad.bdb.server.cherrypy.backlog = 5
+# The timeout for accepted connections
+baltrad.bdb.server.cherrypy.timeout = 10
+
 baltrad.bdb.server.uri = http://localhost:8080
 baltrad.bdb.server.enable_remove_all_files=false
 baltrad.bdb.server.backend.type = sqla
