--- a/misc/virtualenv/MANIFEST.in
+++ b/misc/virtualenv/MANIFEST.in
@@ -1,9 +1,12 @@
-recursive-include docs *.txt
-recursive-include scripts *
-recursive-include virtualenv_support *.egg *.tar.gz
-recursive-exclude virtualenv_support *.py
-recursive-exclude docs/_templates *.*
+recursive-include docs *
+recursive-include tests *.py *.sh *.expected
+recursive-include virtualenv_support *.whl
+recursive-include virtualenv_embedded *
+recursive-exclude docs/_templates *
+recursive-exclude docs/_build *
 include virtualenv_support/__init__.py
+include bin/*
+include scripts/*
 include *.py
 include AUTHORS.txt
 include LICENSE.txt
