Updated to support new jenkins server

--- a/misc/hudsonbuild.properties
+++ b/misc/hudsonbuild.properties
@@ -11,7 +11,7 @@ baltrad.bdb.server.enable_remove_all_files=true
 baltrad.bdb.server.backend.type=sqla
 baltrad.bdb.server.backend.sqla.uri=postgresql://baltrad:baltrad@localhost/bdbtestdb
 baltrad.bdb.server.auth.providers=noauth,keyczar
-baltrad.bdb.server.auth.keyczar.keystore_root=/home/hudson/.hudson/jobs/baltrad-db/workspace/client/java/etc/keys
+baltrad.bdb.server.auth.keyczar.keystore_root=/var/lib/jenkins/workspace/baltrad-db/client/java/etc/keys
 baltrad.bdb.server.auth.keyczar.keys.testkey=testkey
 baltrad.bdb.bin.path=../../test-env/bin
 itest.bdbserver.properties=../../misc/hudsonbuild.properties
